--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ output:
 
 ## Bio
 
-Hello! My name is Natalia and I'm a Master of Public Health student at Johns Hopkins. I grew up in Boston and have also lived in New Orleans and Madrid. For several years, I worked as a research assistant in neuroscience and immunology labs, uncovering the biological mechanisms of psychiatric disorders and finding ways to enhance the immune system's ability to fight cancer. At Hopkins, I am studying Epidemiology and Biostatistics and in my career, I want to use these skills to better understand health outcomes in vulnerable populations. Leveraging my research training, I want to help find ways to reduce health disparities, particularly in mental health and inflammatory disorders.
+Hello! My name is Natalia and I'm a Master of Public Health student at Johns Hopkins. I grew up in Boston and have also lived in New Orleans and Madrid. For several years, I worked as a research assistant in neuroscience and immunology labs, uncovering the biological mechanisms of psychiatric disorders and finding ways to enhance the immune system's ability to fight cancer. At Hopkins, I am studying Epidemiology and Biostatistics and in my career, I want to use these skills to better understand health outcomes in vulnerable populations. Leveraging my research training, I want to reduce health disparities, particularly in mental health and inflammatory disorders.
 
 Along with science and public health, I am also interested in travel and photography. While living in Madrid, I visited over 20 new places. I always brought my film camera with me to capture interesting architecture and exciting memories. Since moving to Baltimore, I have been expanding my creative outlets and am learning how to knit!
 
