--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ Master of Public Health \| July 2023 - May 2024
 
 **Tulane University** \| New Orleans, LA
 
-Bachelor of Science in Neuroscience. \| August 2016 - May 2020
+Bachelor of Science in Neuroscience \| August 2016 - May 2020
 
 ## Experience
 
